hphp/hack/test/typecheck/akempty/akempty_promotion_7.php.exp
File "akempty_promotion_7.php", line 12, characters 5-6:
Invalid argument (Typing[4110])
File "akempty_promotion_7.php", line 15, characters 12-14:
This is an int
File "akempty_promotion_7.php", line 9, characters 7-10:
It is incompatible with an array (used like a vector) because a value is appended to it
